updating jumbotron title size to prevent overflow

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1  {
 }
 
 #resume {
-  margin: 1.5rem;
+  margin:  2rem auto;
 }
 
 #trans-seasonal {
